<resources>
    <string name="app_name">NozamaAndroid</string>
    <string name="company_name">Nozama Go</string>
    <string name="title_activity_home_view">home_view</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_decoration">Decoration</string>
    <string name="menu_books">Books</string>
    <string name="menu_electrical_appliance">Electrical appliance</string>
    <string name="menu_clothes">Clothes</string>
    <string name="menu_account">Account</string>
    <string name="menu_log_out">Login</string>
    <string name="find_product">Find your product</string>
    <string name="textOrder">OrderList</string>
    <string name="buy">Buy now</string>
    <string name="lessThan">&lt;</string>
    <string name="buyNow">Buy now</string>
    <string name="activityClass">activityClass</string>
    <string name="friendKey">friend</string>
    <string name="product_detail">Product Detail</string>
    <string name="save_rating">Save Rating</string>
    <string name="price">Price</string>
    <string name="save_edit">Save</string>
    <string name="my_account">My account</string>
    <string name="orders">Orders</string>
    <string name="number_of_orders">0</string>
    <string name="on_way">On Way</string>
    <string name="personal_information">Personal information</string>
    <string name="nick">Nick</string>
    <string name="your_nickname">Your Nickname</string>
    <string name="address">Address</string>
    <string name="your_address">Your Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="your_phone_number">Your Phone Number</string>
    <string name="delete_account">Delete Account</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="user_email_com">user@email.com</string>
    <string name="guest">Guest</string>
    <string name="settings">Settings</string>
    <string name="imageChange">imageChange</string>
    <string name="create_account">Create Account</string>
    <string name="image">Manage Image</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="save">Save</string>
    <string name="product_name">Product Name</string>
    <string name="product_price">Product Price</string>
    <string name="describe_the_product">Describe the product</string>
    <string name="home">Home</string>
    <string name="contact">Contact</string>
</resources>
