<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_books"
            android:title="@string/menu_books" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_clothes"
            android:title="@string/menu_clothes" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_decoration"
            android:title="@string/menu_decoration" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_electrical_appliance" />
    </group>

    <item android:title="Settings">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_account"
                android:title="@string/menu_account" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_off"
                android:title="@string/menu_log_out" />
        </menu>
    </item>

</menu>
