<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/lightgray">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:background="@color/lightgray"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/productImage"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@color/white"
            android:scaleType="fitCenter"
            android:src="@drawable/cake" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/tvProductName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Very tastefuly cake with thousand calories"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/tvProductPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price"
                    android:textColor="@color/colorPrimary"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:id="@+id/btnAddToCart"
                    android:layout_width="60dp"
                    android:layout_height="40dp"
                    android:scaleType="fitCenter"
                    android:background="@null"
                    android:src="@drawable/cart_icon"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:onClick="addProductToCart"/>
            </android.support.constraint.ConstraintLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/tvProductDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_detail"
                android:textColor="#616161"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:orientation="vertical">

                <RatingBar
                    android:id="@+id/ratingBar"
                    android:layout_width="240dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:onClick="setRating" />
                <TextView
                    android:id="@+id/tvAmountOfRatings"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="(1900) Ratings"/>

                <Button
                    android:id="@+id/btnSaveRating"
                    style="@style/TextAppearance.AppCompat.Widget.Button.Colored"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center"
                    android:background="@color/colorPrimary"
                    android:onClick="saveRatingButton"
                    android:text="@string/save_rating" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>